hphp/test/quick/impl_abstract_dv_id.php.expectf
HipHop Fatal error: Declaration of B::d() must be compatible with that of A::d() in %s on line 3
